# CAI4_AIS5_S11_P2

./: .env.template  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DELIVERABLES.md  ETL_PIPELINE_ANALYSIS.md  LICENSE  MIGRATION_PLAN.md  Makefile  ONBOARDING.md  PROJECT_FLOW.md  README.md  SETUP_GUIDE.md  architecture.md  config.yaml  docker-compose.yml  download_data.py  extraction_strategy.md  pyproject.toml  quickstart.sh  raw_layer_rules.md  sources_catalog.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
.github/workflows/: ci.yml
Load/: .env.example  .gitignore  MIGRATION_REPORT.md  MIGRATION_SUMMARY.md  README.md  RUN_FROM_SCRATCH.md  docker-compose.yml  healthcheck.py  start_etl.bat  start_etl.sh
Load/cleaned_data/: contacts.csv  etl_batch.csv  products.csv
Load/etl_pipeline/: __init__.py  config.py  db_connection.py  logger.py  main.py
Load/etl_pipeline/architecture/: etl_flow_diagram.md
Load/etl_pipeline/database/: 01_create_database.sql  02_create_staging_tables.sql  03_load_data.sql  04_validation.sql
Load/etl_pipeline/loaders/: __init__.py  load_contacts.py  load_customers.py  load_etl_batch.py  load_order_lines.py  load_products.py  load_sales_orders.py  loader_utils.py
Load/etl_pipeline/validation/: __init__.py  validation.py
adf/: README.md
adf/arm_templates/dev/: ARMTemplateForFactory.json  ARMTemplateParametersForFactory.json
adf/arm_templates/prod/: ARMTemplateParametersForFactory.json
adf/arm_templates/test/: ARMTemplateParametersForFactory.json
adf/datasets/: ds_clean_output.json  ds_crm_source.json  ds_excel_source.json  ds_sql_customers.json
adf/linked_services/: ls_blob_storage.json  ls_sql_server.json
adf/pipelines/: df_merge_transform.json  pl_customer_etl.json
adf/source/dataflow/: DF_Customer_Transform.json
data/clean/: contacts.csv  customers.csv  customers_clean_20240601.csv  dq_report.json  etl_batch.csv  order_lines.csv  products.csv  realistic_contacts_fixed.csv  sales_orders.csv
data/quarantine/: contacts.csv  customers.csv  order_lines.csv  products.csv  sales_orders.csv
data/raw/: ITC CRM_dataset_combined.csv  contacts.csv  crm_customers_20240601.csv  customers.csv  etl_batch.csv  excel_customers_20240601.csv  order_lines.csv  products.csv  sales_orders.csv
data/rejected/: contacts.csv  customers.csv  order_lines.csv  products.csv  sales_orders.csv
docker/: Dockerfile  entrypoint.sh
docs/: README.md  architecture_diagram.html  phase_2_transformation_design.md  phase_3_data_quality.md  project_flow.md  technical_specification.md
docs/setup/: local-environment.md
etl/: __main__.py  config.py  extract.py  load.py  main.py  reconcile.py  transform.py  validate.py
etl/logs/: pipeline_summary_20260629_171252.json
etl/utils/: db.py  logger.py
scripts/python/: _audit.py  _profile_itc.py  dq_checks.py  extract.py  main.py  transform.py  transform_itc.py
sql/: README.md
sql/scripts/: 01_create_database.sql  01_enterprise_data_model_mysql.sql  02_create_tables.sql  03_create_views.sql  04_load_procedures.sql  05_validation_queries.sql
src/: __init__.py
src/etl_cli/: __init__.py  __main__.py  check_env.py  generate_mock_data.py  pipeline.py  setup.py
tests/: __init__.py  test_check_env.py  test_generate_mock_data.py
wiki/: Contributing.md  Data-Quality-Definitions.md  Data-Randomness-Report.md  Data-Sources.md  Data-Validation.md  ETL-Pipeline.md  ETL_Phase1_Extraction_Diagrams.md  Glossary.md  Home.md  Project-Architecture.md  README.md  Run-Guide.md  SQL-Schema.md  Setup-Guide.md  Team-Roles.md  Transformation-Rules.md  diagrams.md  project_flow.md
(+31 files in other folders)
