[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-data-etl"
version = "1.0.0"
description = "ETL لبيانات العملاء من مصادر متعددة - Customer Data ETL from Multiple Sources"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Data ETL Team"},
]
keywords = ["etl", "customer", "azure", "sql-server", "data-warehouse"]
dependencies = []
